<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.github.bthink-bgu</groupId>
	<artifactId>BPjs-Context</artifactId>
	<version>1.0.0</version>
	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
<!--		<exec.mainClass>il.ac.bgu.cs.bp.bpjs.context.Verifier</exec.mainClass>-->
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.github.bthink-bgu</groupId>
			<artifactId>BPjs</artifactId>
			<version>0.12.0</version>
		</dependency>
	</dependencies>
</project>
